--- a/.github/workflows/rfc-action.yml
+++ b/.github/workflows/rfc-action.yml
@@ -14,6 +14,6 @@ jobs:
     if: ${{ github.event.issue.pull_request && startsWith(github.event.comment.body, '/rfc') }}
     runs-on: ubuntu-latest
     steps:
-      - uses: paritytech/rfc-action@main
+      - uses: paritytech/rfc-action@rzadp/merge-option
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
