--- a/.github/workflows/rfc-action.yml
+++ b/.github/workflows/rfc-action.yml
@@ -4,8 +4,8 @@ on:
   issue_comment:
     types: [created]
 
-# permissions:
-  # pull-requests: write
+permissions:
+  pull-requests: write
   # contents: write
 
 jobs:
