--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -10,8 +10,9 @@ jobs:
     steps:
       - uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.READ_FELLOWS_TOKEN }}
           script: |
-            # const prs = await github.paginate(github.rest.pulls.list, {...context.repo, state: 'open'})
+            // const prs = await github.paginate(github.rest.pulls.list, {...context.repo, state: 'open'})
             const prs = await github.paginate(github.rest.pulls.list, {owner: 'polkadot-fellows', repo: 'RFCs', state: 'open'})
             console.log(`Found ${prs.length} PRs.`)
 
