List those file

--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -8,14 +8,26 @@ jobs:
   mdbook:
     runs-on: ubuntu-latest
     steps:
+      - run: mkdir -p mdbook/src/proposed
       - uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.READ_FELLOWS_TOKEN }}
           script: |
-            // const prs = await github.paginate(github.rest.pulls.list, {...context.repo, state: 'open'})
-            const prs = await github.paginate(github.rest.pulls.list, {owner: 'polkadot-fellows', repo: 'RFCs', state: 'open'})
+            const owner = 'polkadot-fellows'
+            const repo = 'RFCs'
+            const prs = await github.paginate(github.rest.pulls.list, {owner, repo, state: 'open'})
             console.log(`Found ${prs.length} PRs.`)
 
             for (const pr of prs) {
-              console.log(pr)
+              const addedMarkdownFiles = (
+                await github.rest.pulls.listFiles({
+                  owner, repo,
+                  pull_number: pr.number,
+                })
+              ).data.filter(
+                (file) => file.status === "added" && file.filename.startsWith("text/") && file.filename.includes(".md"),
+              );
+              if (addedMarkdownFiles.length !== 1) continue;
+              const [rfcFile] = addedMarkdownFiles;
+              console.log(rfcFile)
             }
