--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -8,7 +8,9 @@ jobs:
   mdbook:
     runs-on: ubuntu-latest
     steps:
-      - run: mkdir -p mdbook/src/proposed
+      - run: |
+          mkdir -p mdbook/src/proposed
+          mkdir -p patches/text
       - uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.READ_FELLOWS_TOKEN }}
@@ -30,4 +32,13 @@ jobs:
               if (addedMarkdownFiles.length !== 1) continue;
               const [rfcFile] = addedMarkdownFiles;
               console.log(rfcFile)
+              // The git patches seems to be the only thing available right away.
+              // The alternative would be to download the file contents but that adds API calls.
+              require('fs').writeFileSync(`patches/${rfcFile.filename}.patch`, rfcFile.patch)
             }
+      - run: |
+          ls -l patches/text
+          for f in ./patches/text/*.patch;
+          do
+            git apply $f
+          done;
