--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -34,7 +34,9 @@ jobs:
               console.log(rfcFile)
               // The git patches seems to be the only thing available right away.
               // The alternative would be to download the file contents but that adds API calls.
-              require('fs').writeFileSync(`patches/${rfcFile.filename}.patch`, rfcFile.patch)
+              // The patch in this object is not a full patch with valid syntax, so we need to modify it a bit - add a header.
+              const patch = `--- /dev/null\n+++ b/${rfcFile.filename}\n` + rfcFile.patch
+              require('fs').writeFileSync(`patches/${rfcFile.filename}.patch`, patch)
             }
       - run: |
           ls -l patches/text
