--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -42,5 +42,6 @@ jobs:
           ls -l patches/text
           for f in ./patches/text/*.patch;
           do
+            cat $f
             git apply $f
           done;
