--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -8,6 +8,7 @@ jobs:
   mdbook:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - run: |
           mkdir -p mdbook/src/proposed
           mkdir -p patches/text
@@ -45,4 +46,10 @@ jobs:
             git apply $f
           done;
           mv patches/text/*.md mdbook/src/proposed
-      - run: ls mdbook/src/proposed
+
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@adeb05db28a0c0004681db83893d56c0388ea9ea # v1.2.0
+        with:
+          mdbook-version: '0.4.35'
+      
+      - run: mdbook/book.sh
